--- a/css/bottom.less
+++ b/css/bottom.less
@@ -114,47 +114,47 @@
 
     /* 添加背景图片样式 */
     .block_63 {
-      background-image: url('image/9-2@4x.png');
+      background-image: url('../image/9-2@4x.png');
       background-size: 100%;
     }
 
     .block_64 {
-      background-image: url('image/9-3@4x.png');
+      background-image: url('../image/9-3@4x.png');
       background-size: 100%;
     }
 
     .block_65 {
-      background-image: url('image/9-4@4x.png');
+      background-image: url('../image/9-4@4x.png');
       background-size: 100%;
     }
 
     .block_66 {
-      background-image: url('image/9-5@4x.png');
+      background-image: url('../image/9-5@4x.png');
       background-size: 100%;
     }
 
     .block_67 {
-      background-image: url('image/9-6@4x.png');
+      background-image: url('../image/9-6@4x.png');
       background-size: 100%;
     }
 
     .block_68 {
-      background-image: url('image/9-7@4x.png');
+      background-image: url('../image/9-7@4x.png');
       background-size: 100%;
     }
 
     .block_69 {
-      background-image: url('image/9-8@4x.png');
+      background-image: url('../image/9-8@4x.png');
       background-size: 100%;
     }
 
     .block_70 {
-      background-image: url('image/9-9@4x.png');
+      background-image: url('../image/9-9@4x.png');
       background-size: 100%;
     }
 
     .block_71 {
-      background-image: url('image/9-10@4x.png');
+      background-image: url('../image/9-10@4x.png');
       background-size: 100%;
     }
   }
@@ -534,24 +534,26 @@
       width: auto;
     }
   }
-  // .group_39 {
-  //   overflow: hidden;
-  //   white-space: nowrap;
-  //   position: relative;
-  // }
+  #signature-container {
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+  }
   
-  // .signature-item {
-  //   display: inline-block;
-  //   margin-right: 20px; /* 每个签名之间的间距 */
-  //   animation: scroll-right 10s linear infinite;
-  // }
+  .group_39-content {
+    display: inline-block;
+    white-space: nowrap;
+    position: absolute;
+    animation: scroll-content 10s linear infinite;
+    display: flex;
+  }
   
-  // @keyframes scroll-right {
-  //   from {
-  //     transform: translateX(-100%);
-  //   }
-  //   to {
-  //     transform: translateX(100%);
-  //   }
-  // }
+  @keyframes scroll-content {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
 }
