--- a/css/bottom.less
+++ b/css/bottom.less
@@ -338,6 +338,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      cursor: pointer;
       .draw {
         font-family: D-DINExp-Bold;
         font-weight: bold;
