--- a/css/bottom.less
+++ b/css/bottom.less
@@ -213,11 +213,13 @@
 
   .group_104 {
     margin-top: 0;
+    z-index: 20;
   }
 
   .box_91 {
     margin-top: 0;
-    transform: rotateY(180deg);
+    z-index: 10;
+    // transform: rotateY(180deg);
   }
 
   .card-container.flipped .group_104 {
@@ -252,7 +254,6 @@
   }
 
   .block_15 {
-    height: 100vh;
     display: flex;
     align-items: flex-start;
     .group_17 {
