--- a/css/bottom.less
+++ b/css/bottom.less
@@ -111,52 +111,52 @@
     min-height: 100%;
     scrollbar-width: thin;
     scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+  }
 
-    /* 添加背景图片样式 */
-    .block_63 {
-      background-image: url('../image/9-2@4x.png');
-      background-size: 100%;
-    }
+  /* 添加背景图片样式 */
+  .block_63 {
+    background-image: url('../image/9-2@4x.png');
+    background-size: 100%;
+  }
 
-    .block_64 {
-      background-image: url('../image/9-3@4x.png');
-      background-size: 100%;
-    }
+  .block_64 {
+    background-image: url('../image/9-3@4x.png');
+    background-size: 100%;
+  }
 
-    .block_65 {
-      background-image: url('../image/9-4@4x.png');
-      background-size: 100%;
-    }
+  .block_65 {
+    background-image: url('../image/9-4@4x.png');
+    background-size: 100%;
+  }
 
-    .block_66 {
-      background-image: url('../image/9-5@4x.png');
-      background-size: 100%;
-    }
+  .block_66 {
+    background-image: url('../image/9-5@4x.png');
+    background-size: 100%;
+  }
 
-    .block_67 {
-      background-image: url('../image/9-6@4x.png');
-      background-size: 100%;
-    }
+  .block_67 {
+    background-image: url('../image/9-6@4x.png');
+    background-size: 100%;
+  }
 
-    .block_68 {
-      background-image: url('../image/9-7@4x.png');
-      background-size: 100%;
-    }
+  .block_68 {
+    background-image: url('../image/9-7@4x.png');
+    background-size: 100%;
+  }
 
-    .block_69 {
-      background-image: url('../image/9-8@4x.png');
-      background-size: 100%;
-    }
+  .block_69 {
+    background-image: url('../image/9-8@4x.png');
+    background-size: 100%;
+  }
 
-    .block_70 {
-      background-image: url('../image/9-9@4x.png');
-      background-size: 100%;
-    }
+  .block_70 {
+    background-image: url('../image/9-9@4x.png');
+    background-size: 100%;
+  }
 
-    .block_71 {
-      background-image: url('../image/9-10@4x.png');
-      background-size: 100%;
-    }
+  .block_71 {
+    background-image: url('../image/9-10@4x.png');
+    background-size: 100%;
   }
 
   .group_39::-webkit-scrollbar {
@@ -396,7 +396,7 @@
     }
     .img-slide-wrapper{
       width: 66.67vw;
-      margin-top: -6vw;
+      margin-top: 3vw;
       .img-slide-item img{
         width: 305px;
         height: 200px;
@@ -412,7 +412,7 @@
         box-shadow: 0px 2px 16px 0px rgba(0,0,0,0.29);
         background: #fff;
         padding: 40px 20px;
-        height: 47.71vw;
+        height: 43.02vw;
         width: 66.6vw;
         display: flex;
         flex-wrap: wrap;
@@ -450,31 +450,43 @@
         background-position: center;
         background-size: cover;
         // height: 43vw;
+        .box-content {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          width: 41.15vw;
+          justify-content: space-around;
+          .line {
+            width: 0.05vw;
+            height: 8.07vw;
+            border: 0.07vw solid #FFFFFF;
+            opacity: 0.5;
+          }
+        }
        }
        .img-slide-item-box-5-title {
-        width: 295px;
-        height: 84px;
+        width: 100%;
         font-family: D-DINExp-Bold, D-DINExp;
         font-weight: bold;
-        font-size: 20px;
+        font-size: 1.67vw;
         color: #FFFFFF;
-        line-height: 28px;
-        text-align: left;
+        line-height: 1.82vw;
+        text-align: center;
         font-style: normal;
-        margin-bottom: 33px;
+        margin-bottom: 3.65vw
        }
     
        .img-slide-item-box-5-text-wrapper {
         margin-bottom: 24px;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
+        flex-direction: column;
        }
        .img-slide-item-box-5-text-wrapper img {
         width: 56px;
         height: auto;
         margin: 0;
-        margin-right: 20px;
         border: 1px solid #FFFFFF;
         border-radius: 10px;
        }
@@ -484,14 +496,14 @@
         font-size: 26px;
         color: #FFFFFF;
         line-height: 30px;
-        text-align: left;
+        text-align: center;
         font-style: normal;
-        margin-bottom: 5px;
+        margin: 1.56vw 0 0.31vw;
        }
        .img-slide-item-box-5-text-wrapper span {
         font-family: D-DINExp;
         font-weight: normal;
-        font-size: 15px;
+        font-size: 0.94vw;
         color: #FFFFFF;
         line-height: 21px;
         text-align: left;
