--- a/css/index.css
+++ b/css/index.css
@@ -1344,7 +1344,7 @@
   width: 2.77vw;
   height: 1.2vw;
   overflow-wrap: break-word;
-  color: rgba(0, 0, 0, 1);
+  color: rgba(0, 0, 0, .5);
   font-size: 0.88vw;
   font-family: D-DINExp;
   font-weight: normal;
@@ -1423,7 +1423,7 @@
 }
 
 .box_83 {
-  box-shadow: 0px 15px 21px -6px rgba(214, 251, 199, 0.37);
+  /* box-shadow: 0px 15px 21px -6px rgba(214, 251, 199, 0.37); */
   background-color: rgba(214, 251, 199, 1);
   border-radius: 24px;
   width: 40.53vw;
@@ -1781,7 +1781,7 @@
 }
 
 .box_88 {
-  box-shadow: 0px 15px 21px -6px rgba(214, 251, 199, 0.37);
+  /* box-shadow: 0px 15px 21px -6px rgba(214, 251, 199, 0.37); */
   background-color: rgba(242, 237, 229, 1);
   border-radius: 24px;
   width: 40.53vw;
@@ -1891,6 +1891,7 @@
   height: 2.61vw;
   width: 9.38vw;
   margin: 1.87vw 0 1.3vw 1.56vw;
+  text-decoration: none;
 }
 
 .text_335 {
@@ -1967,7 +1968,7 @@
 }
 
 .box_89 {
-  box-shadow: 0px 15px 21px -6px rgba(214, 251, 199, 0.37);
+  /* box-shadow: 0px 15px 21px -6px rgba(214, 251, 199, 0.37); */
   background-color: rgba(225, 246, 255, 1);
   border-radius: 24px;
   width: 40.53vw;
@@ -2103,6 +2104,7 @@
   white-space: nowrap;
   line-height: 1.2vw;
   margin: 0.72vw 0 0 0;
+  text-decoration: none;
 }
 
 .group_101 {
