--- a/css/modal.less
+++ b/css/modal.less
@@ -16,28 +16,28 @@
   }
   .modal-logo {
     position: absolute;
-    width: 7.55vw;
-    height: 1.04vw;
-    top: 1.56vw;
-    left: 1.88vw;
+    width: 145px;
+    height: 20px;
+    top: 30px;
+    left: 36px;
   }
 
   .modal-close {
     position: absolute;
-    width: 0.92vw;
-    height: 0.92vw;
+    width: 18px;
+    height: 18px;
     cursor: pointer;
-    top: 0.99vw;
-    right: 0.99vw;
+    top: 19px;
+    right: 19px;
   }
   .text-wrapper_1 {
-    width: 48.13vw;
-    height: 32.3vw;
+    width: 924px;
+    height: 620px;
     position: relative;
     background-color: #ffffff;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); // 居中显示
+    transform: translate(-50%, -50%);
     overflow: hidden;
   }
   @keyframes modalFadeIn {
@@ -64,8 +64,9 @@
     transition: all 0.3s ease-in-out;
     display: none;
     img {
-      width: 20vw;
-      height: 23.44vw;
+      width: 384px;
+      height: 450px;
+      margin-right: 12px;
     }
     &.show {
       display: block;
@@ -73,46 +74,47 @@
       transition: all 0.3s ease-in-out;
     }
     .title {
-      width: 18.23vw;
+      width: 350px;
       font-family: D-DINExp-Bold, D-DINExp;
       font-weight: bold;
-      font-size: 1.88vw;
+      font-size: 36px;
       color: #000000;
-      line-height: 2.08vw;
+      line-height: 40px;
       text-align: left;
       font-style: normal;
     }
     .describe {
-      width: 18.23vw;
+      width: 350px;
       font-family: D-DINExp;
       font-weight: normal;
-      font-size: 0.78vw;
+      font-size: 15px;
       color: #000000;
-      line-height: 1.09vw;
+      line-height: 21px;
       text-align: left;
       font-style: normal;
-      margin: 0.63vw 0 2.29vw;
+      margin: 12px 0 44px;
     }
   }
   .activity {
     align-items: center;
     flex-direction: row;
     justify-content: center;
-    margin-top: 4.43vw;
+    margin-top: 85px;
   }
   .rewards {
     > img {
-      width: 20vw;
-      height: 23.44vw;
+      width: 384px;
+      height: 450px;
+      margin-right: 12px;
     }
     .drawBtn {
       cursor: pointer;
       background-color: #36DD51;
-      width: 18.23vw;
-      height: 2.6vw;
-      line-height: 2.6vw;
+      width: 350px;
+      height: 50px;
+      line-height: 50px;
       text-align: center;
-      font-size: 0.78vw;
+      font-size: 15px;
       font-family: D-DINExp-Bold, D-DINExp;
     }
     .drawBtn:hover {
@@ -121,26 +123,26 @@
   }
   .discountCode {
     .discountCodeInfo {
-      width: 17.81vw;
-      height: 3.65vw;
+      width: 342px;
+      height: 70px;
       background: #000000;
-      border: 0.05vw solid #000000;
+      border: 1px solid #000000;
       display: flex;
       align-items: center;
       flex-direction: column;
       justify-content: center;
       img {
         cursor: pointer;
-        width: 1.04vw;
-        height: 1.04vw;
-        margin-left: 1.15vw;
+        width:20px;
+        height: 20px;
+        margin-left: 22px;
       }
       .discountCodeText {
         font-family: D-DINExp-Bold, D-DINExp;
         font-weight: bold;
-        font-size: 1.15vw;
+        font-size: 22px;
         color: #FFFFFF;
-        line-height: 1.35vw;
+        line-height: 26px;
         font-style: normal;
         display: flex;
         align-items: center;
@@ -149,28 +151,27 @@
       .discountCodeDescribe {
         font-family: D-DINExp;
         font-weight: normal;
-        font-size: 0.63vw;
+        font-size: 12px;
         color: #03FE00;
-        line-height: 0.83vw;
+        line-height: 16px;
         font-style: normal;
       }
     }
     .shopNow {
-      margin-top: 0.63vw;
-      width: 17.81vw;
-      height: 2.6vw;
+      margin-top: 12px;
+      width: 342px;
+      height: 50px;
       background: #FFFFFF;
-      font-size: 0.78vw;
-      border: 0.05vw solid #000000;
+      font-size:15px;
+      border: 1px solid #000000;
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
       text-decoration: none;
       font-family: D-DINExp-Bold, D-DINExp;
-      font-size: 0.78rem;
       color: #000000;
-      line-height: 1.09rem;
+      line-height: 21px;
     }
   }
   .discountCode,
@@ -185,22 +186,23 @@
     
     .email-input {
       flex: 1;
-      width: 13.33vw;
-      height: 2.6vw;
+      width: 256px;
+      height: 50px;
+      line-height: 50px;
       background: #FFFFFF;
-      border: 0.05vw solid #000000;
-      font-size: 0.78vw;
-      padding: 0 0.63vw;
+      border: 1px solid #000000;
+      font-size:15px;
+      padding: 0 12px;
     }
     
     .confirm-btn {
-      width: 4.9vw;
-      height: 2.6vw;
+      width: 94px;
+      height: 50px;
       background: #000000;
       color: #fff;
       border: none;
       cursor: pointer;
-      font-size: 0.78vw;
+      font-size: 15px;
     }
     
     .confirm-btn:hover {
@@ -209,14 +211,14 @@
     .tip {
       font-family: D-DINExp;
       font-weight: normal;
-      font-size: 0.78vw;
+      font-size: 15px;
       color: #00B000;
-      line-height: 1.09vw;
+      line-height: 21px;
       font-style: normal;
-      margin-top: 0.63vw;
+      // margin-top: 0.63vw;
       display: none;
       position: absolute;
-      bottom: -1.2vw;
+      top: 55px;
     }
     .tip.err-tip {
       color: #FF0000;
@@ -224,34 +226,36 @@
   }
   .rule {
     .text_1 {
-      width: 13.44vw;
-      height: 1.05vw;
+      // width: 13.44vw;
+      // height: 1.05vw;
       overflow-wrap: break-word;
-      font-size: 1.14vw;
+      font-size: 22px;
       white-space: nowrap;
-      line-height: 1.05vw;
-      margin: 5.67vw 0 0 3.75vw;
+      line-height: 20px;
+      margin: 109px 0 24px 72px;
       font-family: D-DINExp-Bold, D-DINExp;
       font-weight: bold;
       color: #000000;
       text-align: left;
       font-style: normal;
+      display: inline-block;
     }
     
     .paragraph_1 {
-      width: 40.63vw;
-      height: 22.5vw;
+      width: 780px;
+      height: 424px;
       overflow-wrap: break-word;
-      color: rgba(0, 0, 0, 1);
-      font-size: 0.78vw;
-      line-height: 1.04vw;
-      margin: 1.25vw 0 11.82vw 3.75vw;
+      color: rgba(0, 0, 0, .8);
+      font-size: 15px;
+      line-height: 20px;
+      margin: 0 72px 43px 72px;
       font-family: D-DINExp;
       font-weight: normal;
       color: #000000;
       text-align: left;
       font-style: normal;
-      overflow-y: scroll
+      overflow-y: scroll;
+      display: inline-block;
     }
   }
 }
