--- a/css/bottom.less
+++ b/css/bottom.less
@@ -8,9 +8,10 @@
 
     >* {
       cursor: pointer;
+      border: 0;
     }
     > div:not(:first-child):not(:last-child) {
-      margin-left: -0.2vw;
+      margin-left: -0.21vw;
     }
   }
   
@@ -219,6 +220,7 @@
   .box_91 {
     margin-top: 0;
     z-index: 10;
+    width: calc(54.69vw - 1px);
     // transform: rotateY(180deg);
   }
 
@@ -597,7 +599,7 @@
     display: inline-block;
     white-space: nowrap;
     position: absolute;
-    animation: scroll-content 10s linear infinite;
+    animation: scroll-content 20s linear infinite;
     display: flex;
   }
   
