--- a/css/index.css
+++ b/css/index.css
@@ -2300,7 +2300,6 @@
   background-repeat: no-repeat;
   width: 54.69vw;
   height: 33.34vw;
-  border: 1px solid rgba(151, 151, 151, 1);
   margin: 3.12vw 0 11.45vw 22.65vw;
 }
 
@@ -2704,7 +2703,9 @@
 
 .image-wrapper_10 {
   border-radius: 50%;
-  background-image: url(https://lanhu-dds-backend.oss-cn-beijing.aliyuncs.com/merge_image/imgs/6f78859ade394a98ac27bb5b8bef696d_mergeImage.png);
+  background-image: url('../image/9-1@4x.png');
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 2.09vw;
   border: 1.8599999999999999px solid rgba(255, 255, 255, 1);
   width: 2.09vw;
