--- a/css/bottom.css
+++ b/css/bottom.css
@@ -9,9 +9,10 @@
 }
 .page .box_17 > * {
   cursor: pointer;
+  border: 0;
 }
 .page .box_17 > div:not(:first-child):not(:last-child) {
-  margin-left: -0.2vw;
+  margin-left: -0.21vw;
 }
 .page .text-wrapper_29,
 .page .box_18 {
@@ -187,6 +188,7 @@
 .page .box_91 {
   margin-top: 0;
   z-index: 10;
+  width: calc(54.69vw - 1px);
 }
 .page .card-container.flipped .group_104 {
   transform: rotateY(180deg);
@@ -537,7 +539,7 @@
   display: inline-block;
   white-space: nowrap;
   position: absolute;
-  animation: scroll-content 10s linear infinite;
+  animation: scroll-content 20s linear infinite;
   display: flex;
 }
 @keyframes scroll-content {
