--- a/css/bottom.less
+++ b/css/bottom.less
@@ -454,8 +454,8 @@
           display: flex;
           flex-direction: row;
           flex-wrap: wrap;
-          width: 41.15vw;
-          justify-content: space-around;
+          width: 43.65vw;
+          justify-content: space-between;
           .line {
             width: 0.05vw;
             height: 8.07vw;
@@ -477,7 +477,7 @@
        }
     
        .img-slide-item-box-5-text-wrapper {
-        margin-bottom: 24px;
+        // margin-bottom: 24px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -496,6 +496,7 @@
         margin: 0;
         border: 0.052vw solid #FFFFFF; /* 1px / 19.2 */
         border-radius: 0.52vw; /* 10px / 19.2 */
+        box-shadow: unset;
        }
 
       //  .img-slide-item-box-5-text-wrapper span:first-child {
@@ -511,9 +512,9 @@
       .img-slide-item-box-5-text-wrapper span:first-child {
         font-family: D-DINExp-Bold, D-DINExp;
         font-weight: bold;
-        font-size: 1.35vw; /* 26px / 19.2 */
+        font-size: 2.08vw; /* 26px / 19.2 */
         color: #FFFFFF;
-        line-height: 1.56vw; /* 30px / 19.2 */
+        line-height: 2.4vw; /* 30px / 19.2 */
         text-align: center;
         font-style: normal;
         margin: 1.56vw 0 0.31vw;
@@ -533,7 +534,7 @@
         font-weight: normal;
         font-size: 0.94vw;
         color: #FFFFFF;
-        line-height: 1.09vw; /* 21px / 19.2 */
+        line-height: 1.15vw; /* 21px / 19.2 */
         text-align: left;
         font-style: normal;
       }
