feat: 代码冲突修改

--- a/css/bottom.css
+++ b/css/bottom.css
@@ -362,7 +362,7 @@
 .page .pin-spacer .text_43 {
   text-align: center;
 }
-.page .pin-spacer .video-box {
+.page .pin-spacer .page-video-box {
   margin-top: -1.5vw;
 }
 .page .pin-spacer .video-wrapper video {
