--- a/css/bottom.less
+++ b/css/bottom.less
@@ -390,7 +390,7 @@
     .text_43 {
       text-align: center;
     }
-    .video-box {
+    .page-video-box {
       margin-top: -1.5vw
     }
     .video-wrapper video {
