--- a/css/common.css
+++ b/css/common.css
@@ -181,7 +181,7 @@ button:active {
   box-sizing: border-box;
   flex-direction: column;
 }
-.video-box {
+.page-video-box {
   /* height: 60vh */
 }
 .video-wrapper video {
